# artnode-esp

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  artnet.c  artnet_controller.c  idf_component.yml  main.c  udp_client.c
main/include/: artnet.h  colours.h  controller_mappings.h  controller_server.h  handlers.h  http.h  led.h  led_config.h  led_system.h  network.h  patterns.h
main/src/: artnet.c  colours.c  controller_mappings.c  controller_server.c  handlers.c  http.c  led.c  led_config.c  led_system.c  network.c  patterns.c
